--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  <title>Baloncesto Legacy Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>Baloncesto Legacy
+    </h1>
+  </header>
+  <nav>
+    <ul>
+      <li>Products</li>
+      <li>History</li>
+      <li>Contacts</li>
+    </ul>
+  </nav>
+  <main>
+    <h3>Our Why</h3>
+    <p>With a new era of basketball approaching us now, Baloncesto Legacy was
+      created with the goal of keeping basketball on an upwards trend. There's
+      argument to whether basketball is a dying sport with how the game is
+      changing and our goal is to keep it alive! Find everything basketball at
+      Baloncesto Legacy.</p>
+    <h3>Small Beginnings</h3>
+    <p>Since we are so fresh to the market, many don't know what we offer. Our
+      workers have spent countless hours researching the history of basketball
+      to the smallest details. We've tracked down lost documentaries, beginning
+      league jerseys, all different types of shoes, and so much more. Anything
+      related to the game of basketetball can be found here.</p>
 
+    <footer> This site was created as part of the Web Development I course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course.  It is not intended for public use.
+    </footer>
+  </main>
 </body>
 </html>
