--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="wrapper">
   <header>
     <h1>Baloncesto Legacy
     </h1>
@@ -17,7 +18,7 @@
     </ul>
   </nav>
   <main>
-    <h3>Our Why</h3>
+    <h3><span class="why">Our Why</span></h3> <img src="AbreuLogoCMYK.tif>"
     <p>With a new era of basketball approaching us now, Baloncesto Legacy was
       created with the goal of keeping basketball on an upwards trend. There's
       argument to whether basketball is a dying sport with how the game is
@@ -33,5 +34,6 @@
     <footer> This site was created as part of the Web Development I course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course.  It is not intended for public use.
     </footer>
   </main>
+</div id="wrapper">
 </body>
 </html>
