--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <main>
-    <h3><span class="why">Our Why</span></h3> <img src="AbreuLogoCMYK.tif>"
+    <h3><span class="why">Our Why</span></h3> <img src="AbreuLogoCMYK.jpg">
     <p>With a new era of basketball approaching us now, Baloncesto Legacy was
       created with the goal of keeping basketball on an upwards trend. There's
       argument to whether basketball is a dying sport with how the game is
