--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
   <div id="wrapper">
   <header>
-    <h1>Baloncesto Legacy
-    </h1>
+    <h1>Baloncesto Legacy -  Home</h1>
   </header>
   <nav>
     <ul>
@@ -17,8 +16,10 @@
       <li>Contacts</li>
     </ul>
   </nav>
+
   <main>
-    <h3><span class="why">Our Why</span></h3> <img src="AbreuLogoCMYK.jpg">
+    <img src="Logo.jpg">
+    <h3><span class="why">Our Why</span></h3>
     <p>With a new era of basketball approaching us now, Baloncesto Legacy was
       created with the goal of keeping basketball on an upwards trend. There's
       argument to whether basketball is a dying sport with how the game is
