--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <body>
   <div id="wrapper">
   <header>
-    <h1>Baloncesto Legacy -  Home</h1>
+    <img src="Logo.jpg" id="leftlogo"><h1>Baloncesto Legacy - Home</h1>
   </header>
   <nav>
     <ul>
-      <li>Products</li>
-      <li>History</li>
-      <li>Contacts</li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="history.html">History</a></li>
+      <li><a href="contacts.html">Contacts</a></li>
     </ul>
   </nav>
 
