--- a/products.html
+++ b/products.html
@@ -17,13 +17,18 @@
       <li><a href="contacts.html">Contacts</a></li>
     </ul>
   </nav>
+<main>
+    <p id="producttext">Shoes Sizes(Men): 9in -14in<br><br><br>Jersey Sizes: Small-X Large<p>
+    <ul>
+      <li> <img src="Shoes.jpg" alt="Basketball Shoes" width="225" height="168">Basketball Shoes </li>
+                  <li> <img src="Jersey.jpg" alt="Jersey" width="225" height="168">Jersey</li>
 
-  <main>
 
 
     <footer> This site was created as part of the Web Development I course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course.  It is not intended for public use.
     </footer>
   </main>
+
 </div id="wrapper">
 </body>
 </html>
