--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <img src="Logo.jpg">
-    <h3><span class="why">Our Why</span></h3>
+    <h2>Our Why</h2>
     <p>With a new era of basketball approaching us now, Baloncesto Legacy was
       created with the goal of keeping basketball on an upwards trend. There's
       argument to whether basketball is a dying sport with how the game is
