--- a/products.html
+++ b/products.html
@@ -18,9 +18,10 @@
     </ul>
   </nav>
 <main>
-    <p id="producttext">Shoes Sizes(Men): 9in -14in<br><br><br>Jersey Sizes: Small-X Large<p>
+    <p id="producttext">Shoes Sizes(Men): 9in -14in<br>$45<br><br><br><br><br><br><br>
+      Jersey Sizes: Small-X Large<br>$30<p>
     <ul>
-      <li> <img src="Shoes.jpg" alt="Basketball Shoes" width="225" height="168">Basketball Shoes </li>
+      <li> <img src="Shoes.jpg" alt="Basketball Shoes" width="225" height="168">Basketball Shoes</li>
                   <li> <img src="Jersey.jpg" alt="Jersey" width="225" height="168">Jersey</li>
 
 
