--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
     <a class="email" href="mailing@gmail.com">mailing@gmail.com</a><br><br><br><br>
     Jake Sparko<br>
     Buisness cordinator<br>
-    <a href="https://www.google.com/">Found on Google Search</a><br><br>
+    <a href="https://www.google.com/"><span class="spanG">Found on Google Search</span></a><br><br>
     </div>
 
     <footer> This site was created as part of the Web Development I course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course.  It is not intended for public use.
